# qfr

./: CMakeLists.txt  README.md  thesis.cmake
apps/: CMakeLists.txt  app.cpp
include/: QuantumComputation.hpp
include/zx/: BenchmarkData.hpp  Extraction.hpp  Extractor.hpp  ExtractorParallel.hpp  Measurement.hpp
src/: CMakeLists.txt  QuantumComputation.cpp
src/zx/: Extraction.cpp  Extractor.cpp  ExtractorParallel.cpp  Measurement.cpp
